feat: updated the creating ofinspection results

--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "apexcharts": "^5.3.5",
     "axios": "^1.9.0",
     "crypto-js": "^4.2.0",
-    "formik": "^2.4.5",
+    "formik": "^2.4.9",
     "moment": "^2.30.1",
+    "quilljs": "^0.18.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18.2.0",
@@ -33,6 +34,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0",
+    "react- -new": "^3.8.3",
     "react-router-dom": "6.23.1",
     "react-select": "^5.8.0",
     "recoil": "^0.7.7",
