--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0",
-    "react- -new": "^3.8.3",
+    "react-quill-new": "^3.8.3",
     "react-router-dom": "6.23.1",
     "react-select": "^5.8.0",
     "recoil": "^0.7.7",
