--- a/package.json
+++ b/package.json
@@ -33,13 +33,11 @@
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.57.0",
-    "react-icons": "^5.5.0",
     "react-quill-new": "^3.8.3",
     "react-router-dom": "6.23.1",
     "react-select": "^5.8.0",
     "recoil": "^0.7.7",
-    "yup": "^1.3.2",
-    "zod": "^3.25.61"
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@chakra-ui/cli": "^3.21.0",
